# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: ci.yml
page_analyzer/: app.py  db.py  parsing.py  validator.py
page_analyzer/templates/: base.html  index.html  message.html  url.html  urls.html
templates/: index.html
