[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["time9 <lol.time9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88