[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["time9 <lol.time9@gmail.com>"]
packages = [
    { include = "page_analyzer" },
    ]

[tool.poetry.dependencies]
python = "^3.8.18"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
validators = "^0.22.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
flask = "^3.0.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
gunicorn = "21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88